--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -14,6 +14,7 @@
 @import "./sections/ProductGridSection2"; 
 @import "./sections//FooterSection";
 @import "./components/Breadcrumbs";
+@import "./components/Shoppingcart";
 @import "./sections/MapSection";
 @import "./sections/ContactFormSection";
 @import "./sections/Hero";
