Connected Web Api to React

--- a/src/assets/scss/cores/_Base.scss
+++ b/src/assets/scss/cores/_Base.scss
@@ -41,3 +41,11 @@ input {
     background: rgb(230,230,230);
     background: linear-gradient(90deg, rgba(230,230,230,1) 0%, rgba(245,245,245,1) 100%);
 }
+
+
+.cardBoxBG {
+    background-color: grey;
+    color: red;
+    width: 255px;
+    height: 210px;
+}
