Front page products in right place.

--- a/src/assets/scss/sections/_ProductSection1.scss
+++ b/src/assets/scss/sections/_ProductSection1.scss
@@ -10,6 +10,11 @@
         display: flex;
         margin-top: 5rem;
 
+    .divideSection items {
+        margin-top: 3rem;
+        padding-top: 3rem;
+    }
+
         // Left side-----------------------------
         .textOnImg {
             max-height: auto;
