--- a/src/assets/scss/sections/_ProductGridSection2.scss
+++ b/src/assets/scss/sections/_ProductGridSection2.scss
@@ -16,8 +16,13 @@
     .card {
         border: none;
         width: 255px;
-        margin-top: -30px;
+        margin-top: 60px;
         margin-left: 8px; 
+        margin-right: 1rem;
+        // margin-top: 0;
+        // margin-bottom: 0;
+        // padding-top: 0;
+        // padding-bottom: 0;
                 
         .card-img {
             display: grid;
@@ -105,7 +110,7 @@
                 font-size: $font-size-18;
                 font-weight: $font-weight-semiBold;
                 margin: 0 0 20px 0;
-                padding: 0 0 40px 0;
+                padding: 0;
             }
         }
     
@@ -122,3 +127,60 @@
         }
     }
 }
+
+.productSection1 {
+    .grid {
+        width: 100%;
+  
+
+
+        .productSection1 {
+            margin-right: -40%;
+            margin-top: -114px;
+            // margin-bottom: 0;
+            // padding-top: 0;
+            // padding-bottom: 0;
+            display: block;
+        }
+    
+        .productSection1b {
+            margin-right: -40%;
+            margin-top: -114px;
+            // margin-bottom: 0;
+            // padding-top: 0;
+            // padding-bottom: 0;
+            display: block;
+        }
+    }
+ }
+
+.productSection2 {
+    .grid2 {
+        width: 100%;
+        // margin-right: 10rem;
+        padding-left: 15.5rem;
+  
+
+
+        .productSection2 {
+            margin-right: -99%;
+            margin-top: -114px;
+            // margin-bottom: 0;
+            // padding-top: 0;
+            // padding-bottom: 0;
+       
+        }
+
+        .productSection2b {
+            margin-right: -90%;
+            margin-top: -114px;
+            // margin-bottom: 0;
+            // padding-top: 0;
+            // padding-bottom: 0;
+            display: block;
+        }
+    
+ 
+    }
+ }
+
