--- a/src/assets/scss/sections/_ProductSection1.scss
+++ b/src/assets/scss/sections/_ProductSection1.scss
@@ -1,60 +1,101 @@
 .productSection1 {
-    margin-top: -1rem;
-    margin-bottom: -2rem;
+    // margin-top: -1rem;
+    // margin-bottom: -2rem;
     
     .container {
         max-width: 1680px;
-    }
+    
 
-    .divide2 {
-        display: flex;
-        margin-top: 5rem;
+        .divide2 {
+            display: flex;
+            margin-top: 3.5rem;
 
-    .divideSection items {
-        margin-top: 3rem;
-        padding-top: 3rem;
-    }
+            // Left side-----------------------------
+            .textOnImg {
+                max-height: auto;
+                position: relative;
+                display: inline-block;
 
-        // Left side-----------------------------
-        .textOnImg {
-            max-height: auto;
-            position: relative;
-            display: inline-block;
+                .imgSize {
+                    height: 700px;
+                    width: 825px;
+                    padding-right: 0.8rem;
+                    object-fit: fill;
+                    margin-bottom: 4rem;
 
-            .imgSize {
-                height: 700px;
-                width: 825px;
-                padding-right: 0.8rem;
-                object-fit: fill;
-                margin-bottom: 4rem;
+                }
+                
+                .centering {
+                    position: absolute;
+                    top: 38%;
+                    left: 30%;
 
-            }
-            
-            .centering {
-                position: absolute;
-                top: 38%;
-                left: 30%;
+                    .__button {
+                        text-align: center;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                }
 
-                .__button {
-                    text-align: center;
-                    align-items: center;
-                    justify-content: center;
+                h2 {
+                    color: $color-white;
+                    font-size: $font-size-45;
+                    font-weight: $font-weight-bold;
                 }
             }
 
-            h2 {
-                color: $color-white;
-                font-size: $font-size-45;
-                font-weight: $font-weight-bold;
-            }
+            // Right side-----------------------------
+            // .productsSize {
+            //     // max-width: 50%;
+            //     // display:flex;
+            //     // flex-wrap:wrap;
+            //     // justify-content:center;
+            //     // gap:10px;//optional
+
+            //     // display: grid;
+            //     // grid-template-columns: auto auto;
+            //     // grid-gap: 10px;
+            //     // padding: 10px;
+                
+            //     padding-left: 0;
+            //     margin-right: 0;
+            // }
+
+            // .productsSize > div {
+            //     background-color: rgba(255, 255, 255, 0.8);
+            //     text-align: center;
+            //     padding: 20px 0;
+            //     font-size: 30px;
+            //   }
+
+
         }
 
-        // Right side-----------------------------
-        .productsSize {
-            padding-left: 0;
-            margin-right: 15rem;
-        }
+
+
+
     }
-}
 
 
+    
+
+        // .productSection1b {
+        //     width: 100%;
+        //     background-color: lightseagreen;
+        //     // margin-right: -20rem;
+        //     margin-top: 0;
+        //     // margin-bottom: 0;
+        //     padding-top: 0;
+        //     // padding-bottom: 0;
+        // }
+    }
+
+
+
+
+
+
+ 
+//  .item{
+//     flex-basis:30%; // will try to fill 30% of the parents width 
+//  }
