--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -27,6 +27,7 @@
 @import "./components/ListCard";
 @import "./components/CreateProductForm";
 @import "./components//UpdateForms";
-//Views
+//Views/Pages
 @import "./pages/NotFound";
 @import "./pages/ManageProductsPage";
+@import "./pages/ProductDetailsPage2"
